[workspace]
members = [ 
    "volans-core",
    "volans-swarm",
    "volans-stream-select",
    "volans-swarm-derive",
    "volans-codec",

    # Transport
    "transports/volans-tcp",
    "transports/volans-ws",
    "transports/volans-plaintext",

    # Multiplexing
    "muxers/volans-muxing",
    "muxers/volans-yamux",

    # Protocol
    "protocols/volans-ping",
    "protocols/volans-request",
    "protocols/volans-stream",

    # volans
    "volans",

    # examples
    "examples/ws-demo"

]
resolver = "3"

[workspace.package]
rust-version = "1.88.0"
edition = "2024"

[workspace.dependencies]
thiserror = "2.0.12"
futures = "0.3.31"
tracing = { version = "0.1" }
bytes = "1.10.1"
smol_str = "0.3.2"
tokio = { version = "1.47", default-features = false}

# core
volans-stream-select = { path = "volans-stream-select", version = "0.1.0"}
volans-core = { path = "volans-core" , version = "0.1.0"}
volans-swarm = { path = "volans-swarm", version = "0.1.1"}
volans-swarm-derive = { path = "volans-swarm-derive", version = "0.1.0"}

volans-codec = { path = "volans-codec", version = "0.1.0"}

# transports
volans-tcp = { path = "transports/volans-tcp", version = "0.1.0"}
volans-ws = { path = "transports/volans-ws", version = "0.1.0"}
volans-plaintext = { path = "transports/volans-plaintext", version = "0.1.0"}

# muxers
volans-muxing = { path = "muxers/volans-muxing", version = "0.1.0"}
volans-yamux = { path = "muxers/volans-yamux", version = "0.1.0"}


# protocols
volans-ping = { path = "protocols/volans-ping", version = "0.1.0"}
volans-request = { path = "protocols/volans-request", version = "0.1.1"}
volans-stream = { path = "protocols/volans-stream", version = "0.1.1-beta"}


# all
volans = { path = "volans", version = "0.1.3-beta"}
