[workspace]
members = [ 
    "volans-core",
    "volans-swarm",
    "volans-stream-select",
    "volans-swarm-derive",
    "volans-codec",

    # Transport
    "transports/volans-tcp",
    "transports/volans-ws",
    "transports/volans-plaintext",

    # Multiplexing
    "muxers/volans-muxing",
    "muxers/volans-yamux",

    # Protocol
    "protocols/volans-ping",
    "protocols/volans-request",
    "protocols/volans-stream",
    "protocols/volans-bridge",
    "protocols/volans-registry",

    # volans
    "volans",

    # examples
    "examples/ws-demo",
]
resolver = "3"

[workspace.package]
rust-version = "1.88.0"
edition = "2024"

[workspace.dependencies]
thiserror = "2.0.12"
futures = "0.3.31"
tracing = { version = "0.1" }
bytes = "1.10.1"
smol_str = "0.3.2"
futures-bounded = { version = "0.3.0", features = ["futures-timer"] }
futures-timer = "3.0.3"
if-watch = "3.2.1"
tokio = { version = "1.47", default-features = false}

# core
volans-stream-select = { path = "volans-stream-select", version = "0.1.0"}
volans-core = { path = "volans-core" , version = "0.2.0-beta"}
volans-swarm = { path = "volans-swarm", version = "0.2.0-beta"}
volans-swarm-derive = { path = "volans-swarm-derive", version = "0.2.0-beta"}

volans-codec = { path = "volans-codec", version = "0.2.0-beta"}

# transports
volans-tcp = { path = "transports/volans-tcp", version = "0.2.0-beta"}
volans-ws = { path = "transports/volans-ws", version = "0.2.0-beta"}
volans-plaintext = { path = "transports/volans-plaintext", version = "0.2.0-beta"}

# muxers
volans-muxing = { path = "muxers/volans-muxing", version = "0.1.0"}
volans-yamux = { path = "muxers/volans-yamux", version = "0.1.0"}


# protocols
volans-ping = { path = "protocols/volans-ping", version = "0.2.0-beta"}
volans-request = { path = "protocols/volans-request", version = "0.2.0-beta"}
volans-stream = { path = "protocols/volans-stream", version = "0.2.0-beta"}
volans-bridge = { path = "protocols/volans-bridge", version = "0.2.0-beta"}
volans-registry = { path = "protocols/volans-registry", version = "0.2.0-beta"}

# all
volans = { path = "volans", version = "0.2.0-beta"}
