[package]
name = "volans-codec"
version = "0.2.1-beta"
rust-version.workspace = true
edition.workspace = true
description = "Codec for Volans networking framework"
authors = ["Cariers Kim <cariers.kim@gmail.com>"]
license = "MIT"
repository = "https://github.com/cariers/volans"
keywords = ["volans", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
asynchronous-codec = "0.7.0"
prost = "0.14.1"
serde = "1.0.219"
serde_json = "1.0.142"
unsigned-varint = { version = "0.8.0", features = ["futures", "asynchronous_codec"] }
