[package]
name = "volans-core"
version = "0.2.0-beta"
edition = "2024"
description = "Core trait and struct for Volans networking framework"
authors = ["Cariers Kim <cariers.kim@gmail.com>"]
license = "MIT"
repository = "https://github.com/cariers/volans"
keywords = ["volans", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
either = "1.15.0"
pin-project = "1.1.10"
url = "2.5.4"
futures.workspace = true
thiserror.workspace = true
bytes.workspace = true
volans-stream-select.workspace = true
tracing.workspace = true
bs58 = "0.5.1"
futures-timer = "3.0.3"
ed25519-dalek = { version = "2.2.0", features = ["serde", "rand_core"] }
rand = "0.9.2"
serde = "1.0.219"
unsigned-varint = { version = "0.8.0", features = ["std"] }
percent-encoding = "2.3.1"
byteorder = "1.5.0"
anyhow = "1.0.99"
