[package]
name = "volans"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
description = "Volans networking framework"
authors = ["Cariers Kim <cariers.kim@gmail.com>"]
license = "MIT"
repository = "https://github.com/cariers/volans"
keywords = ["volans", "networking"]
categories = ["network-programming", "asynchronous"]

[features]
full = [
    "tcp",
    "muxing",
    "ws",
    "swarm",
    "ping",
    "plaintext",
]

tcp = ["dep:volans-tcp"]
muxing = ["dep:volans-muxing"]
ws = ["dep:volans-ws"]
swarm = ["dep:volans-swarm"]
ping = ["dep:volans-ping"]
plaintext = ["dep:volans-plaintext"]

[dependencies]
volans-core.workspace = true
volans-swarm = { workspace = true, optional = true }

# protocols
volans-ping = { workspace = true, optional = true }

# transports
volans-tcp = { workspace = true, optional = true }
volans-ws = { workspace = true, optional = true }
volans-plaintext = { workspace = true, optional = true }

# multiplexing
volans-muxing = { workspace = true, optional = true }