[package]
name = "volans"
version = "0.2.0-beta"
rust-version.workspace = true
edition.workspace = true
description = "Volans networking framework"
authors = ["Cariers Kim <cariers.kim@gmail.com>"]
license = "MIT"
repository = "https://github.com/cariers/volans"
keywords = ["volans", "networking"]
categories = ["network-programming", "asynchronous"]

[features]
full = [
    "ws",
    "tcp",
    "codec",
    "plaintext",
    "muxing",
    "yamux",
    "swarm",
    "ping",
    "request",
    "stream",
]

swarm = ["dep:volans-swarm"]
codec = ["dep:volans-codec"]

# transports
plaintext = ["dep:volans-plaintext"]
tcp = ["dep:volans-tcp"]
ws = ["dep:volans-ws"]

# multiplexing
muxing = ["dep:volans-muxing"]
yamux = ["dep:volans-yamux"]

# protocols
ping = ["dep:volans-ping"]
request = ["dep:volans-request"]
stream = ["dep:volans-stream"]

[dependencies]
volans-core.workspace = true
volans-swarm = { workspace = true, optional = true }
volans-codec = { workspace = true, optional = true }

# transports
volans-tcp = { workspace = true, optional = true }
volans-ws = { workspace = true, optional = true }
volans-plaintext = { workspace = true, optional = true }

# multiplexing
volans-muxing = { workspace = true, optional = true }
volans-yamux = { workspace = true, optional = true }

# protocols
volans-ping = { workspace = true, optional = true }
volans-request = { workspace = true, optional = true }
volans-stream = { workspace = true, optional = true }