[package]
name = "ws-demo"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
volans = {workspace = true, features = ["full"]}
tokio = {workspace = true, features = ["full"]}
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tracing = {workspace = true}
anyhow = "1.0.98"
rand = "0.9.2"
futures.workspace = true
futures-timer = "3.0.3"
mdns-sd = "0.14.0"
