[package]
name = "volans-muxing"
version = "0.1.1"
rust-version.workspace = true
edition.workspace = true
description = "Muxing multiplexing protocol for volans"
authors = ["Cariers Kim <cariers.kim@gmail.com>"]
license = "MIT"
repository = "https://github.com/cariers/volans"
keywords = ["volans", "networking"]
categories = ["network-programming", "asynchronous"]


[dependencies]
futures = { workspace = true }
muxing = { version = "0.2.1" }
volans-core.workspace = true
tracing.workspace = true