[package]
name = "volans-server-stream"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
parking_lot = "0.12.4"
futures = { workspace = true }
volans-swarm.workspace = true
volans-core.workspace = true
tracing.workspace = true
thiserror.workspace = true
smallvec = "1.15.1"
