[package]
name = "volans-stream"
version = "0.2.0-beta"
rust-version.workspace = true
edition.workspace = true
description = "Stream protocol for volans"
authors = ["Cariers Kim <cariers.kim@gmail.com>"]
license = "MIT"
repository = "https://github.com/cariers/volans"
keywords = ["volans", "networking"]
categories = ["network-programming", "asynchronous"]


[dependencies]
parking_lot = "0.12.4"
futures = { workspace = true }
volans-swarm.workspace = true
volans-core.workspace = true
volans-codec.workspace = true
tracing.workspace = true
thiserror.workspace = true
smallvec = "1.15.1"
