[package]
name = "volans-plaintext"
version = "0.2.0-beta"
rust-version.workspace = true
edition.workspace = true
description = "Plaintext transport for volans"
authors = ["Cariers Kim <cariers.kim@gmail.com>"]
license = "MIT"
repository = "https://github.com/cariers/volans"
keywords = ["volans", "networking"]
categories = ["network-programming", "asynchronous"]


[dependencies]
volans-core.workspace = true
futures.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true